--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 def groupId = "org.dbtools"
+group = groupId
 archivesBaseName = "gradle-dbtools-plugin"
-version = '3.1.1-SNAPSHOT'
+version = '3.1.1'
 
 sourceCompatibility = '1.6'
 
@@ -18,60 +19,74 @@ dependencies {
     compile 'org.dbtools:dbtools-gen:3.1.1'
 }
 
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
 // deploy to local cache (to make accessible to local projects) (./gradlew clean build uploadArchives)
 uploadArchives {
     repositories {
 
         // deploy to local
-        mavenDeployer {
-            repository (url: "file://${System.env.HOME}/.m2/repository/")
-            pom.groupId = groupId
-            pom.artifactId = archivesBaseName
-            pom.version = version
-            pom.packaging = 'aar'
-            uniqueVersion = false // don't put in a timestamp on the filename (other project will not be able to depend on it)
-        }
+//        mavenDeployer {
+//            repository (url: "file://${System.env.HOME}/.m2/repository/")
+//            pom.groupId = groupId
+//            pom.artifactId = archivesBaseName
+//            pom.version = version
+//            pom.packaging = 'aar'
+//            uniqueVersion = false // don't put in a timestamp on the filename (other project will not be able to depend on it)
+//        }
 
         // deploy to Central
-//        mavenDeployer {
-//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-////      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-////        authentication(userName: ossrhUsername, password: ossrhPassword)
-////      }
-//
-////      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-////        authentication(userName: ossrhUsername, password: ossrhPassword)
-////      }
-//
-//            pom.project {
-//                name 'DBTools Gradle Plugin'
-//                packaging 'jar'
-//                description 'Gradle plugin for use with dbtools'
-//                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//
-//                scm {
-//                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
-//                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
-//                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//                }
-//
-//                licenses {
-//                    license {
-//                        name 'The Apache License, Version 2.0'
-//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                    }
-//                }
-//
-//                developers {
-//                    developer {
-//                        id 'jcampbell'
-//                        name 'Jeff Campbell'
-//                        email 'jeffdcamp@gmail.com'
-//                    }
-//                }
-//            }
-//        }
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'DBTools Gradle Plugin'
+                packaging 'jar'
+                description 'Gradle plugin for use with dbtools'
+                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+
+                scm {
+                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
+                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
+                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'jcampbell'
+                        name 'Jeff Campbell'
+                        email 'jeffdcamp@gmail.com'
+                    }
+                }
+            }
+        }
     }
 }
 
