--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'signing'
 def groupId = "org.dbtools"
 group = groupId
 archivesBaseName = "gradle-dbtools-plugin"
-version = '3.1.3'
+version = '3.2.0'
 
 sourceCompatibility = '1.6'
 
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:3.1.3'
+    compile 'org.dbtools:dbtools-gen:3.2.0-SNAPSHOT'
 }
 
 task javadocJar(type: Jar) {
