--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:3.2.0-SNAPSHOT'
+    compile 'org.dbtools:dbtools-gen:3.2.0'
 }
 
 task javadocJar(type: Jar) {
