--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'signing'
 def groupId = "org.dbtools"
 group = groupId
 archivesBaseName = "gradle-dbtools-plugin"
-version = '3.4.1'
+version = '3.5.0'
 
 sourceCompatibility = '1.6'
 
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:3.4.1'
+    compile 'org.dbtools:dbtools-gen:3.5.0-SNAPSHOT'
 }
 
 task javadocJar(type: Jar) {
@@ -42,51 +42,51 @@ uploadArchives {
     repositories {
 
         // deploy to local
-//        mavenDeployer {
-//            repository (url: "file://${System.env.HOME}/.m2/repository/")
-//            pom.groupId = groupId
-//            pom.artifactId = archivesBaseName
-//            pom.version = version + '-SNAPSHOT'
-//            pom.packaging = 'aar'
-//            uniqueVersion = false // don't put in a timestamp on the filename (other project will not be able to depend on it)
-//        }
+        mavenDeployer {
+            repository (url: "file://${System.env.HOME}/.m2/repository/")
+            pom.groupId = groupId
+            pom.artifactId = archivesBaseName
+            pom.version = version
+            pom.packaging = 'aar'
+            uniqueVersion = false // don't put in a timestamp on the filename (other project will not be able to depend on it)
+        }
 
         // deploy to Central
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'DBTools Gradle Plugin'
-                packaging 'aar'
-                description 'Gradle plugin for use with dbtools'
-                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-
-                scm {
-                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
-                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
-                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-                }
-
-                licenses {
-                    license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'jcampbell'
-                        name 'Jeff Campbell'
-                        email 'jeffdcamp@gmail.com'
-                    }
-                }
-            }
-        }
+//        mavenDeployer {
+//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+//
+//            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+//                authentication(userName: ossrhUsername, password: ossrhPassword)
+//            }
+//
+//            pom.project {
+//                name 'DBTools Gradle Plugin'
+//                packaging 'aar'
+//                description 'Gradle plugin for use with dbtools'
+//                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+//
+//                scm {
+//                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
+//                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
+//                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+//                }
+//
+//                licenses {
+//                    license {
+//                        name 'The Apache License, Version 2.0'
+//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//                    }
+//                }
+//
+//                developers {
+//                    developer {
+//                        id 'jcampbell'
+//                        name 'Jeff Campbell'
+//                        email 'jeffdcamp@gmail.com'
+//                    }
+//                }
+//            }
+//        }
     }
 }
 
