--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'signing'
 def groupId = "org.dbtools"
 group = groupId
 archivesBaseName = "gradle-dbtools-plugin"
-version = '3.5.0'
+version = '4.0.1'
 
 sourceCompatibility = '1.6'
 
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:3.5.0'
+    compile 'org.dbtools:dbtools-gen:4.0.1-SNAPSHOT'
 }
 
 task javadocJar(type: Jar) {
