--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'maven-publish'
 def groupId = "org.dbtools"
 group = groupId
 archivesBaseName = "gradle-dbtools-plugin"
-version = '6.0.0'
+version = '6.0.1'
 
 sourceCompatibility = '1.7'
 
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:6.0.0'
+    compile 'org.dbtools:dbtools-gen:6.0.1'
 }
 
 task javadocJar(type: Jar) {
@@ -87,52 +87,52 @@ uploadArchives {
     repositories {
 
         // deploy to local
-        mavenDeployer {
-            repository(url: "file://${System.env.HOME}/.m2/repository/")
-            pom.groupId = groupId
-            pom.artifactId = archivesBaseName
-            pom.version = version
-            pom.packaging = 'jar'
-            uniqueVersion = false
-            // don't put in a timestamp on the filename (other project will not be able to depend on it)
-        }
+//        mavenDeployer {
+//            repository(url: "file://${System.env.HOME}/.m2/repository/")
+//            pom.groupId = groupId
+//            pom.artifactId = archivesBaseName
+//            pom.version = version
+//            pom.packaging = 'jar'
+//            uniqueVersion = false
+//            // don't put in a timestamp on the filename (other project will not be able to depend on it)
+//        }
 
         // deploy to Central
-//        mavenDeployer {
-//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-//            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                authentication(userName: ossrhUsername, password: ossrhPassword)
-//            }
-//
-//            pom.project {
-//                name 'DBTools Gradle Plugin'
-//                packaging 'jar'
-//                description 'Gradle plugin for use with dbtools'
-//                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//
-//                scm {
-//                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
-//                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
-//                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//                }
-//
-//                licenses {
-//                    license {
-//                        name 'The Apache License, Version 2.0'
-//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                    }
-//                }
-//
-//                developers {
-//                    developer {
-//                        id 'jcampbell'
-//                        name 'Jeff Campbell'
-//                        email 'jeffdcamp@gmail.com'
-//                    }
-//                }
-//            }
-//        }
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'DBTools Gradle Plugin'
+                packaging 'jar'
+                description 'Gradle plugin for use with dbtools'
+                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+
+                scm {
+                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
+                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
+                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'jcampbell'
+                        name 'Jeff Campbell'
+                        email 'jeffdcamp@gmail.com'
+                    }
+                }
+            }
+        }
     }
 }
 
