--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'maven-publish'
 def groupId = "org.dbtools"
 group = groupId
 archivesBaseName = "gradle-dbtools-plugin"
-version = '6.0.1'
+version = '7.0.0'
 
 sourceCompatibility = '1.7'
 
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:6.0.1'
+    compile 'org.dbtools:dbtools-gen:7.0.0-SNAPSHOT'
 }
 
 task javadocJar(type: Jar) {
@@ -38,55 +38,11 @@ signing {
     sign configurations.archives
 }
 
-// DEPLOY to Maven Local Cache
-//  ./gradlew clean build publishToMavenLocal
-publishing {
-    publications {
-        maven(MavenPublication) {
-            // telling gradle to publish project's jar archive
-            from components.java
-        }
-//        myPublication(MavenPublication) {
-//            // telling gradle to publish project's jar archive
-//            from components.java
-//
-//            pom.withXml {
-//                asNode().children().last() + {
-//                    resolveStrategy = Closure.DELEGATE_FIRST
-//                    name 'DBTools Gradle Plugin'
-//                    description 'Gradle plugin for use with dbtools'
-//                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//                    scm {
-//                        connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
-//                        developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
-//                        url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//                    }
-//
-//                    licenses {
-//                        license {
-//                            name 'The Apache License, Version 2.0'
-//                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                        }
-//                    }
-//
-//                    developers {
-//                        developer {
-//                            id 'jcampbell'
-//                            name 'Jeff Campbell'
-//                            email 'jeffdcamp@gmail.com'
-//                        }
-//                    }
-//                }
-//            }
-//        }
-    }
-}
-
-// deploy to local cache (to make accessible to local projects) (./gradlew clean build uploadArchives)
-uploadArchives {
+// ./gradlew clean check installLocal
+task installLocal(type: Upload) {
+    description "Installs the artifacts to the local Maven repository."
+    configuration = configurations['archives']
     repositories {
-
-        // deploy to local
         mavenDeployer {
             repository(url: "file://${System.env.HOME}/.m2/repository/")
             pom.groupId = groupId
@@ -96,43 +52,48 @@ uploadArchives {
             uniqueVersion = false
             // don't put in a timestamp on the filename (other project will not be able to depend on it)
         }
-
-        // deploy to Central
-//        mavenDeployer {
-//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-//            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                authentication(userName: ossrhUsername, password: ossrhPassword)
-//            }
-//
-//            pom.project {
-//                name 'DBTools Gradle Plugin'
-//                packaging 'jar'
-//                description 'Gradle plugin for use with dbtools'
-//                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//
-//                scm {
-//                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
-//                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
-//                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-//                }
-//
-//                licenses {
-//                    license {
-//                        name 'The Apache License, Version 2.0'
-//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                    }
-//                }
-//
-//                developers {
-//                    developer {
-//                        id 'jcampbell'
-//                        name 'Jeff Campbell'
-//                        email 'jeffdcamp@gmail.com'
-//                    }
-//                }
-//            }
-//        }
     }
 }
 
+// ./gradlew clean check deploy
+task deploy(type: Upload) {
+    description "Deploys the artifacts to the Nexus repository."
+    configuration = configurations['archives']
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'DBTools Gradle Plugin'
+                packaging 'jar'
+                description 'Gradle plugin for use with dbtools'
+                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+
+                scm {
+                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
+                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
+                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'jcampbell'
+                        name 'Jeff Campbell'
+                        email 'jeffdcamp@gmail.com'
+                    }
+                }
+            }
+        }
+    }
+}
