Changed deployment to use gradle-mvn-push.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'maven'
-apply plugin: 'signing'
-apply plugin: 'maven-publish'
-
-def groupId = "org.dbtools"
-group = groupId
-archivesBaseName = "gradle-dbtools-plugin"
-version = '7.0.0'
 
 sourceCompatibility = '1.7'
 
@@ -17,25 +10,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.dbtools:dbtools-gen:7.0.0-SNAPSHOT'
-}
-
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-artifacts {
-    archives javadocJar, sourcesJar
-}
-
-signing {
-    sign configurations.archives
+    compile 'org.dbtools:dbtools-gen:7.0.0'
 }
 
 // ./gradlew clean check installLocal
@@ -45,55 +20,16 @@ task installLocal(type: Upload) {
     repositories {
         mavenDeployer {
             repository(url: "file://${System.env.HOME}/.m2/repository/")
-            pom.groupId = groupId
-            pom.artifactId = archivesBaseName
-            pom.version = version
-            pom.packaging = 'jar'
+            pom.groupId = GROUP
+            pom.artifactId = POM_ARTIFACT_ID
+            pom.version = VERSION_NAME
+            pom.packaging = POM_PACKAGING
             uniqueVersion = false
             // don't put in a timestamp on the filename (other project will not be able to depend on it)
         }
     }
 }
 
-// ./gradlew clean check deploy
-task deploy(type: Upload) {
-    description "Deploys the artifacts to the Nexus repository."
-    configuration = configurations['archives']
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'DBTools Gradle Plugin'
-                packaging 'jar'
-                description 'Gradle plugin for use with dbtools'
-                url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-
-                scm {
-                    connection 'scm:git:git://github.com/jeffdcamp/gradle-dbtools-plugin.git'
-                    developerConnection 'scm:git:git@github.com:jeffdcamp/gradle-dbtools-plugin.git'
-                    url 'https://github.com/jeffdcamp/gradle-dbtools-plugin'
-                }
-
-                licenses {
-                    license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'jcampbell'
-                        name 'Jeff Campbell'
-                        email 'jeffdcamp@gmail.com'
-                    }
-                }
-            }
-        }
-    }
-}
+// DEPLOY to Maven Central (this must be the last line of this file)
+// ./gradlew clean check uploadArchives
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
